namespace/application/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx-ingress
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo-nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx
            port:
              number: 80
